--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Állatkert Galéria</title>
     <!-- Bootstrap CSS CDN link -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+        crossorigin="anonymous"">
 
     <!-- Saját CSS fájl -->
-    <link href="style.css" rel="stylesheet">
+    <link href=" style.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Fő konténer a teljes tartalomhoz -->
     <div class="container mt-5">
@@ -39,7 +43,7 @@
             <div class="col-md-6">
                 <img src="images/tigris.jif" alt="Tigris" class="animal-img">
             </div>
-            
+
             <!-- Harmadik sor -->
             <div class="col-md-3">
                 <img src="images/majom.jpg" alt="Majom" class="animal-img">
@@ -56,5 +60,7 @@
             </div>
         </div>
     </div>
+    <a href="bootstrap.html" class="btn btn-primary">extra tartalom</a>
 </body>
-</html> 
+
+</html>
